# ecc-buffers

./: CMakeLists.txt  README.md  ecc_buffers.c  ecc_buffers.h  ecc_buffers_tests.c  galois-field  galois_field_8.c  galois_field_8.h  galois_field_8_tests.c  rs_ec.c  rs_ec.h  sample_main.c
kernel_test/: .gitignore  Makefile  ecc.c  ecc.h
tests/: galois_field_8_poly_tests.c  galois_field_8_poly_tests.h  galois_field_8_tests.c  galois_field_8_tests.h  rs_ec_tests.c  rs_ec_tests.h  test_main.c
